API WARHAMMER, sécurité en cours